--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,2 +1,67 @@
-[tool.black]
-line-length = 100
+[project]
+name = "backend"
+version = "0.1.0"
+requires-python = ">=3.13"
+dependencies = [
+    "aiosqlite==0.21.0",
+    "alembic==1.16.2",
+    "annotated-types==0.7.0",
+    "anyio==4.9.0",
+    "asyncpg==0.30.0",
+    "bcrypt==4.3.0",
+    "black==25.1.0",
+    "cffi==1.17.1",
+    "click==8.2.1",
+    "colorama==0.4.6",
+    "cryptography==45.0.3",
+    "dnspython==2.7.0",
+    "ecdsa==0.19.1",
+    "email-validator==2.2.0",
+    "fastapi==0.116.0",
+    "greenlet==3.2.3",
+    "h11==0.16.0",
+    "httptools==0.6.4",
+    "httpx==0.27.0",
+    "idna==3.10",
+    "mako==1.3.10",
+    "markdown-it-py==3.0.0",
+    "markupsafe==3.0.2",
+    "mdurl==0.1.2",
+    "mypy-extensions==1.1.0",
+    "packaging==25.0",
+    "passlib==1.7.4",
+    "pathspec==0.12.1",
+    "pip-review==1.3.0",
+    "platformdirs==4.3.8",
+    "psycopg2==2.9.10",
+    "psycopg2-binary==2.9.10",
+    "pyasn1==0.6.1",
+    "pycparser==2.22",
+    "pydantic==2.11.7",
+    "pydantic-core==2.33.2",
+    "pydantic-settings==2.9.1",
+    "pygments==2.19.1",
+    "pytest==8.4.1",
+    "pytest-asyncio==0.23.7",
+    "pytest-cov==5.0.0",
+    "python-dotenv==1.1.0",
+    "python-jose==3.5.0",
+    "python-multipart==0.0.20",
+    "pyyaml==6.0.2",
+    "rich==14.0.0",
+    "rsa==4.9.1",
+    "shellingham==1.5.4",
+    "six==1.17.0",
+    "sniffio==1.3.1",
+    "sqlalchemy==2.0.41",
+    "sqlalchemy-utils==0.41.2",
+    "starlette==0.46.2",
+    "typer==0.16.0",
+    "typing-extensions==4.14.0",
+    "typing-inspection==0.4.1",
+    "uvicorn==0.35.0",
+    "watchfiles==1.0.5",
+    "websockets==15.0.1",
+]
+
+[tool.ruff]
